--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.34.1",
+    "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "next": "15.5.3",
     "react": "19.1.0",
