--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-phone-number-input": "^3.4.12",
     "swiper": "^12.0.1"
   },
   "devDependencies": {
